Fix profile border clipping

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -35,6 +35,10 @@ body {
     color: black;
     visibility: visible !important;
 }
+.profile-navbar {
+    margin-top: -1px;
+}
+
 .uploadpicture:hover {
     filter:brightness(70%);
 }
